Update styles and icons in various components
- Changed button font-weight to 700 and updated font-family to Montserrat in base.scss.
- Added a new logOut icon SVG to elementIcons.scss.
- Incremented version number in header-tampermonkey.js from 1.0.67 to 1.0.68.
- Removed lighter font-weight from bold elements in modalDialogue.scss.
- Modified contact button styles in messages.scss to include border and border-radius.
- Refactored icon styles in userPanel.scss for better readability and added hover effects for logout buttons.

--- a/src/base.scss
+++ b/src/base.scss
@@ -67,9 +67,10 @@ $awards: (
 }
 
 @mixin button-base {
-  font-weight: normal !important;
   border: none !important;
   border-radius: 3px !important;
+  font-weight: 700 !important;
+  font-family: "Montserrat", sans-serif !important;
 }
 
 @mixin button-style($bg-color, $text-color) {
