--- a/src/profile/_achievements.scss
+++ b/src/profile/_achievements.scss
@@ -2,10 +2,9 @@
 @mixin achieve-icon-base {
   background: linear-gradient(
     135deg,
-    rgba($orange, 0.7) 0%,
-    rgba($blue, 0.7) 100%
+    darken($orange, 10%),
+    darken($blue, 10%)
   ) !important;
-  border: 1px solid transparent !important;
   border-radius: 10px !important;
 
   img {
@@ -19,7 +18,6 @@
     rgba($orange, 1) 0%,
     rgba($blue, 1) 100%
   ) !important;
-  border: 1px solid transparent !important;
 }
 
 @mixin achieve-levels-base {
@@ -34,6 +32,7 @@
 @mixin achieve-content-base {
   background-color: $deepgray !important;
   border-radius: 10px !important;
+  width: auto !important;
 
   .title {
     color: $orange !important;
@@ -54,7 +53,6 @@
 
 // Base achieve styles that apply everywhere
 .achieve {
-  border: 1px solid transparent;
   background: transparent !important;
   border-radius: 10px !important;
 
@@ -143,15 +141,40 @@
   }
 
   .list {
+    margin: 5px 0 0 !important;
+
+    &.reduced {
+      @include flex-layout(row);
+      flex-wrap: wrap !important;
+    }
+
     .group {
       .item {
+        .actions {
+          width: 20px !important;
+          height: 20px !important;
+          right: 5px !important;
+          top: 5px !important;
+
+          .dropdown-toggle {
+            width: 20px !important;
+            height: 20px !important;
+          }
+        }
+
         .achieve {
           background: transparent !important;
         }
       }
 
       .more-achieves {
-        background: transparent !important;
+        color: $lightblue !important;
+        background: $black !important;
+        transition: color 0.15s ease-in-out !important;
+
+        &:hover {
+          color: $blue !important;
+        }
       }
     }
   }
