--- a/src/profile/_root.scss
+++ b/src/profile/_root.scss
@@ -10,6 +10,12 @@
   .trophy {
     @include flex-layout(row, center, center);
 
+    @media (max-width: 550px) {
+      width: 100% !important;
+      margin-bottom: 10px !important;
+      transform: scale(0.9) !important;
+    }
+
     .item {
       .dummy {
         background: $darkgray !important;
@@ -72,10 +78,43 @@
 
     @media (max-width: 1000px) {
       width: 100% !important;
+
+      @media (max-width: 600px) {
+        height: 150px !important;
+
+        .title {
+          top: unset !important;
+          bottom: 40px !important;
+          left: 14px !important;
+        }
+
+        .username {
+          top: unset !important;
+          bottom: 0 !important;
+          left: 14px !important;
+
+          @media (max-width: 420px) {
+            bottom: 10px !important;
+
+            .name {
+              font-size: 20px !important;
+            }
+          }
+        }
+      }
     }
 
     .car {
       background: $darkgray !important;
+    }
+
+    .car-numbers[src="/img/regnum/img.png"] {
+      display: none !important;
+    }
+
+    .car-numbers {
+      bottom: unset !important;
+      top: 60px !important;
     }
 
     .username {
@@ -132,6 +171,10 @@
 
     @media (max-width: 1000px) {
       width: 100% !important;
+
+      @media (max-width: 550px) {
+        padding: 0 !important;
+      }
     }
 
     .profile-content {
@@ -153,6 +196,10 @@
 
           @media (max-width: 720px) {
             width: 100% !important;
+
+            @media (max-width: 550px) {
+              padding: 0 !important;
+            }
           }
         }
 
@@ -425,4 +472,9 @@
       }
     }
   }
+}
+
+// Shift car position from top slightly to bottom when car-numbers image is empty
+body:has(.car-numbers[src="/img/regnum/img.png"]) .car {
+  top: 30px !important;
 }
