Remove unnecessary imports from various SCSS files to streamline stylesheets and improve performance. This includes the removal of imports for variables and mixins that are no longer needed across multiple components such as about, avatar, calendar, and others. Additionally, some media queries and style adjustments were made to enhance responsiveness and maintainability.

--- a/src/main.scss
+++ b/src/main.scss
@@ -6,6 +6,8 @@
 // 1. CONFIGURATION & HELPERS
 // -----------------------------------------------------------------------------
 @import "./data/variables";
+@import "animations";
+@import "./mixins";
 
 // -----------------------------------------------------------------------------
 // 2. EXTERNAL DEPENDENCIES
