--- a/src/profile/_root.scss
+++ b/src/profile/_root.scss
@@ -14,6 +14,14 @@
       width: 100% !important;
       margin-bottom: 10px !important;
       transform: scale(0.9) !important;
+
+      @media (max-width: 460px) {
+        transform: scale(0.8) !important;
+
+        @media (max-width: 420px) {
+          transform: scale(0.6) !important;
+        }
+      }
     }
 
     .item {
@@ -475,6 +483,6 @@
 }
 
 // Shift car position from top slightly to bottom when car-numbers image is empty
-body:has(.car-numbers[src="/img/regnum/img.png"]) .car {
+body:has(.car-numbers[src="/img/regnum/img.png"]) .profile-header .car {
   top: 30px !important;
 }
