--- a/src/notifications.scss
+++ b/src/notifications.scss
@@ -42,6 +42,12 @@
     }
 
     // Join invite button
+    // Do not disturb button
+    button {
+      font: 700 1.2em "Montserrat", sans-serif !important;
+    }
+
+    // Join invite button
     input[type="button"] {
       font-size: 0 !important;
     }
@@ -86,7 +92,7 @@
 
 .notification-bar {
   top: -200px !important;
-  
+
   &.ng-scope:not(.ng-hide) {
     top: 50px !important;
 
@@ -98,7 +104,7 @@
 
 #top-popup {
   top: -200px !important;
-  
+
   &[style*="top: "]:not([style*="top: -"]) {
     top: 50px !important;
 
