Fix button positioning in notifications by removing top property

--- a/src/notifications.scss
+++ b/src/notifications.scss
@@ -44,6 +44,7 @@
     // Join invite button
     // Do not disturb button
     button {
+      top: unset !important;
       font: 700 1.2em "Montserrat", sans-serif !important;
     }
 
