--- a/src/race/race.scss
+++ b/src/race/race.scss
@@ -73,7 +73,7 @@
             tr:nth-child(2) {
               // status-inner parent
               display: flex !important;
-              width: 100% !important;
+              width: 620px !important;
               justify-content: center !important;
               align-items: center !important;
             }
