--- a/src/profile/statistics/_statistics.scss
+++ b/src/profile/statistics/_statistics.scss
@@ -54,7 +54,14 @@ $gametype-colors: (
               display: none !important;
             }
             .chart-pie {
+              @include flex-layout(column, center, center);
+
+              @media (max-width: 420px) {
+                transform: scale(0.85) !important;
+              }
+
               svg {
+                overflow: visible !important;
                 rect {
                   fill: transparent !important;
                 }
