Add loading box styles to garbage.scss
- Added a new selector for the loading box to hide it by default.

--- a/src/garbage.scss
+++ b/src/garbage.scss
@@ -10,7 +10,9 @@
 #speedpanel-back,
 #speedpanel-back-dark,
 #speedpanel-top,
-#speedpanel-arrow {
+#speedpanel-arrow,
+// Profile loading indicator
+#loading-box {
   display: none !important;
 }
 // Remove background images from container corners
