Add styling for gametype-voc links in gamelist
- Introduced a new class for gametype-voc links with specific color and transition effects.
- Added hover effect to lighten the color of gametype-voc links on hover.

--- a/src/gamelist/gamelist.scss
+++ b/src/gamelist/gamelist.scss
@@ -140,6 +140,17 @@
       .cost {
         color: $orange !important;
       }
+
+      .gametype-voc {
+        a {
+          color: $gametype-voc !important;
+          transition: color 0.15s ease-in-out !important;
+
+          &:hover {
+            color: lighten($gametype-voc, 10%) !important;
+          }
+        }
+      }
     }
 
     .players {
