Refactor dialog styles to include fade class for car color and aero dialogs

--- a/src/profile/_garage.scss
+++ b/src/profile/_garage.scss
@@ -1,5 +1,5 @@
 // Car color dialog styles
-.dlg-profile-car-color {
+.fade .dlg-profile-car-color {
   #cp1 {
     #cp1_ColorMap,
     #cp1_ColorBar {
@@ -33,7 +33,7 @@
 }
 
 // Car aero dialog styles
-.dlg-profile-car-aero {
+.fade .dlg-profile-car-aero {
   .aero-canvas {
     border: none !important;
 
