--- a/src/forum/_sectionsList.scss
+++ b/src/forum/_sectionsList.scss
@@ -377,7 +377,7 @@
           display: flex !important;
           width: 100% !important;
 
-          td {
+          td:not(.pages):not(.write) {
             width: 100% !important;
             padding: 0 20px 20px !important;
             background: linear-gradient(
