Add white color to car rating in top award section of race.scss

--- a/src/race/race.scss
+++ b/src/race/race.scss
@@ -523,6 +523,11 @@
             width: 100% !important;
 
             .top-award {
+
+              .car_rating {
+                color: $white !important;
+              }
+
               .numbers {
                 transition: width 0.15s !important;
               }
