--- a/src/popupDialogue.scss
+++ b/src/popupDialogue.scss
@@ -45,6 +45,7 @@
     padding: 6px 12px !important;
     border-radius: 3px !important;
     height: 30px !important;
+    width: fit-content !important;
     line-height: 15px !important;
     border: none !important;
     outline: none !important;
