Add minimum width to popup dialogue buttons for better layout

--- a/src/popupDialogue.scss
+++ b/src/popupDialogue.scss
@@ -46,6 +46,7 @@
     border-radius: 3px !important;
     height: 30px !important;
     width: fit-content !important;
+    min-width: 170px !important;
     line-height: 15px !important;
     border: none !important;
     outline: none !important;
