--- a/src/profile/statistics/_statistics-inside.scss
+++ b/src/profile/statistics/_statistics-inside.scss
@@ -1,6 +1,19 @@
 .profile-root {
   .profile-content {
     .profile-stats {
+      .stats-empty {
+        color: $white !important;
+        background: $black !important;
+
+        h3 {
+          color: $red !important;
+        }
+
+        .icon-icomoon {
+          color: $red !important;
+        }
+      }
+
       .profile-stats-details {
         .top-stats {
           @include flex-layout(row, start, start);
