chat > .smile-groups-action FIX

--- a/src/chat.scss
+++ b/src/chat.scss
@@ -496,9 +496,8 @@ $chatHeaderSize: 26px;
 
                   .smile-groups-action {
                     border: none !important;
-                    padding: 0 !important;
+                    padding: 0 12px !important;
                     margin: 0 !important;
-                    width: 35px !important;
                     height: 35px !important;
                     color: $black !important;
                     background: $gray !important;
