--- a/src/main.scss
+++ b/src/main.scss
@@ -90,3 +90,4 @@
 @import "./klavotools/recentGames";
 @import "./klavotools/chatToBBCode.scss";
 @import "./klavotools/totalGamesCount";
+@import "./klavotools/webTypeStats";
